Update the Documentation.

--- a/docs/css/api-reference.css
+++ b/docs/css/api-reference.css
@@ -1,3 +1,7 @@
+.md-tabs {
+    display: none;
+}
+
 .md-typeset .emojione, .md-typeset .gemoji, .md-typeset .twemoji {
     --md-icon-size: 1.2em;
 }
